Añadidas imagenes en negro para la presentación de los juegos

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         <div class="contenedor-juegos">
             <!-- Juego 1 -->
             <a href="paginas/juegoEldrow.html">
-                <div class="juego" id="juegoEldrow"><img src="img/Eldrow.png" alt="Eldrow" class="imagen-juego"></div>
+                <div class="juego" id="juegoEldrow"><img src="img/Eldrow.png" alt="Eldrow" class="imagen-juego" id="imgEldrow"></div>
             </a>
 
             <!-- Juego 2 -->
             <a href="paginas/juegoEkans.html">
-                <div class="juego" id="juegoEkans"><img src="img/Ekans.png" alt="Ekans" class="imagen-juego"></div>
+                <div class="juego" id="juegoEkans"><img src="img/Ekans.png" alt="Ekans" class="imagen-juego" id="imgEkans"></div>
             </a>
         </div>
     </div>
