Cambio logo Página principal

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienvenida a los Juegos</title>
+    <title>AsiLand Games</title>
     <link rel="stylesheet" href="css/style.css"/>
-    <link rel="icon" href="img/LogoEldrow.ico" type="image/x-icon">
+    <link rel="icon" href="img/LogoAsiLand.png" type="image/x-icon">
     <script src="js/cambiarTema.js"></script>
 </head>
 <body>
